# SC2_Combat_Environment

./: .gitignore  .gitmodules  README.md  makefile  pyproject.toml
src/proto/: observation_collection.proto
src/sc2_combat_detector/: __init__.py  combat_detector.py  combat_detector_pipeline.py  decorators.py  detect_combat.py  main.py  observe_replay.py  settings.py  stream_observations.py  utils.py
src/sc2_combat_detector/detector/: detect_combat.py  generic_draft.py
src/sc2_combat_detector/function_arguments/: cache_observe_replay_args.py  file_detect_combat_args.py  observe_replay_args.py  thread_observe_replay_args.py
src/sc2_combat_detector/function_results/: file_detect_combat_result.py  get_replay_map_hash_result.py
src/sc2_combat_detector/proto/: observation_collection_pb2.py
src/sc2_combat_detector/replay_processing/: observe_replays.py  stream_observations.py
src/sc2_combat_simulator/: __init__.py  combat_simulator.py  main.py  register_custom_map.py  sc2_combat_simulator.py  settings.py  test_map_registering.py
src/sc2_combat_simulator/env/: sc2_combat_env.py
src/sc2_combat_simulator/function_results/: player_units_map_state.py
