[project]
name = "sc2-combat-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kaszanas", email = "34846245+Kaszanas@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = [
    "pysc2-evolved",
    "s2clientprotocol>=5.0.14.93333.0",
    "s2protocol>=5.0.14.93333.0",
    "typer>=0.15.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sc2_combat_detector"]

[tool.uv.sources]
pysc2-evolved = { path = "src/pysc2_evolved" }

[dependency-groups]
dev = ["commitizen>=4.6.3", "pre-commit>=4.2.0", "ruff>=0.11.9"]
